lab3/app/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: crud-ingress
  namespace: default
spec:
  rules:
  - host: osboxes
    http:
      paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: crud-app
              port:
                number: 8888
